Added scripts to make life easier. Added generic pod yaml

--- a/yaml/rdma/mfttool-pod-nvd-srv.yaml
+++ b/yaml/rdma/mfttool-pod-nvd-srv.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: mfttool
 spec:
   nodeSelector: 
-    kubernetes.io/hostname: mocr4pcc02u31 
+    kubernetes.io/hostname: moc-r4pcc04u23
   hostNetwork: true
   serviceAccountName: mfttool
   containers:
